--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <h1>Welcome</h1>
+    <a href="./project_1/">Project 1</a>
+    <a href="./project_2/">Project 2</a>
   </body>
 </html>
