--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Welcome</h1>
-    <a href="./project_1/">Project 1</a>
-    <a href="./project_2/">Project 2</a>
+    <a href="./project_1/index.html">Project 1</a>
+    <a href="./project_2/index.html">Project 2</a>
   </body>
 </html>
