added 2d ouzzle project

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <h1>Welcome</h1>
-    <a href="./FootballTycoon/index.html">Football Tycoon</a>
-    <a href="./project_2/index.html">Project 2</a>
+    <div>
+      <a href="./FootballTycoon">Football Tycoon</a>
+    </div>
+    <div>
+      <a href="./Puzzle2D">2D Rubik's cube</a>
+    </div>
   </body>
 </html>
