added rubik's cube project

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
   <body>
     <h1>Welcome</h1>
     <div>
+      <a href="./Cube">Rubik's Cube Solver</a>
+    </div>
+    <div>
       <a href="./FootballTycoon">Football Tycoon</a>
     </div>
     <div>
-      <a href="./Puzzle2D">2D Rubik's cube</a>
+      <a href="./Puzzle2D">2D Rubik's Cube</a>
     </div>
   </body>
 </html>
