--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Projects</title>
   </head>
   <body>
     <h1>Welcome</h1>
@@ -16,6 +16,9 @@
     </div>
     <div>
       <a href="./Puzzle2D">2D Rubik's Cube</a>
+    </div>
+    <div>
+      <a href="./ProjectWP">Book Shop</a>
     </div>
   </body>
 </html>
