--- a/ProjectWP/index.html
+++ b/ProjectWP/index.html
@@ -15,7 +15,7 @@
         <h1>Login</h1>
         <div class="content">
           <div class="input-field">
-            <input type="email" placeholder="Email" autocomplete="nope" />
+            <input type="email" placeholder="Email" />
           </div>
           <div class="input-field">
             <input
@@ -31,7 +31,6 @@
         </div>
       </form>
     </div>
-    <!-- partial -->
+    <script src="./app.js"></script>
   </body>
-  <script src="./app.js"></script>
 </html>
