--- a/ProjectWP/src/modules/auth/screens/register-screen/register-screen.html
+++ b/ProjectWP/src/modules/auth/screens/register-screen/register-screen.html
@@ -15,23 +15,13 @@
         <h1>Register</h1>
         <div class="content">
           <div class="input-field">
-            <input
-              type="text"
-              placeholder="Name"
-              autocomplete="nope"
-              id="name"
-            />
+            <input type="text" placeholder="Name" id="name" />
           </div>
           <div class="input-field">
-            <input
-              type="text"
-              placeholder="Username"
-              autocomplete="nope"
-              id="username"
-            />
+            <input type="text" placeholder="Username" id="username" />
           </div>
           <div class="input-field">
-            <input type="email" placeholder="Email" autocomplete="nope" />
+            <input type="email" placeholder="Email" />
           </div>
           <div class="input-field">
             <input
