--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <h1>Welcome</h1>
-    <div>
-      <a href="./Cube">Rubik's Cube Solver</a>
-    </div>
-    <div>
-      <a href="./FootballTycoon">Football Tycoon</a>
-    </div>
-    <div>
-      <a href="./Puzzle2D">2D Rubik's Cube</a>
-    </div>
-    <div>
-      <a href="./ProjectWP">Book Shop</a>
+    <h1>Welcome to My Projects</h1>
+    <div class="project-grid">
+      <div class="project-card">
+        <a href="./Cube/index.html">Rubik's Cube Solver</a>
+      </div>
+      <div class="project-card">
+        <a href="./FootballTycoon/index.html">Football Tycoon</a>
+      </div>
+      <div class="project-card">
+        <a href="./Puzzle2D/index.html">2D Rubik's Cube</a>
+      </div>
+
     </div>
   </body>
 </html>
