--- a/index.html
+++ b/index.html
@@ -11,15 +11,38 @@
     <h1>Welcome to My Projects</h1>
     <div class="project-grid">
       <div class="project-card">
+        <canvas class="project-icon" id="cubeCanvas" width="150" height="150"></canvas>
         <a href="./Cube/index.html">Rubik's Cube Solver</a>
       </div>
       <div class="project-card">
+        <canvas class="project-icon" id="footballCanvas" width="150" height="150"></canvas>
         <a href="./FootballTycoon/index.html">Football Tycoon</a>
       </div>
       <div class="project-card">
+        <canvas class="project-icon" id="puzzle2dCanvas" width="150" height="150"></canvas>
         <a href="./Puzzle2D/index.html">2D Rubik's Cube</a>
       </div>
-
+      <div class="project-card">
+        <canvas class="project-icon" id="snakeCanvas" width="150" height="150"></canvas>
+        <a href="./Snake/index.html">Snake Game</a>
+      </div>
+      <div class="project-card">
+        <canvas class="project-icon" id="tetrisCanvas" width="150" height="150"></canvas>
+        <a href="./Tetris/index.html">Tetris</a>
+      </div>
+      <div class="project-card">
+        <canvas class="project-icon" id="chessCanvas" width="150" height="150"></canvas>
+        <a href="./Chess/index.html">Chess Engine</a>
+      </div>
+      <div class="project-card">
+        <canvas class="project-icon" id="memoryCanvas" width="150" height="150"></canvas>
+        <a href="./Memory/index.html">Memory Game</a>
+      </div>
+      <div class="project-card">
+        <canvas class="project-icon" id="platformerCanvas" width="150" height="150"></canvas>
+        <a href="./Platformer/index.html">Platform Adventure</a>
+      </div>
     </div>
+    <script src="icons.js"></script>
   </body>
 </html>
