more games + improvements

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <canvas class="project-icon" id="platformerCanvas" width="150" height="150"></canvas>
         <a href="./Platformer/index.html">Platform Adventure</a>
       </div>
+      <div class="project-card" onclick="location.href='BrickBreaker/index.html'">
+        <canvas class="project-icon" id="brickBreakerCanvas" width="150" height="150"></canvas>
+        <a href="./BrickBreaker/index.html">Brick Breaker</a>
+      </div>
     </div>
     <script src="icons.js"></script>
   </body>
