--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         <canvas class="project-icon" id="brickBreakerCanvas" width="150" height="150"></canvas>
         <a href="./BrickBreaker/index.html">Brick Breaker</a>
       </div>
+      <div class="project-card" onclick="location.href='Checkers/index.html'">
+        <canvas class="project-icon" id="checkersCanvas" width="150" height="150"></canvas>
+        <a href="./Checkers/index.html">Checkers</a>
+      </div>
     </div>
     <script src="icons.js"></script>
   </body>
