--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         <canvas class="project-icon" id="checkersCanvas" width="150" height="150"></canvas>
         <a href="./Checkers/index.html">Checkers</a>
       </div>
+      <div class="project-card" onclick="location.href='FlappyBird/index.html'">
+        <canvas class="project-icon" id="flappyBirdCanvas" width="150" height="150"></canvas>
+        <a href="./FlappyBird/index.html">Flappy Bird</a>
+      </div>
     </div>
     <script src="icons.js"></script>
   </body>
