--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <canvas class="project-icon" id="flappyBirdCanvas" width="150" height="150"></canvas>
         <a href="./FlappyBird/index.html">Flappy Bird</a>
       </div>
+      <div class="project-card" onclick="location.href='RPG/index.html'">
+        <canvas class="project-icon" id="rpgCanvas" width="150" height="150"></canvas>
+        <a href="./RPG/index.html">2D RPG</a>
+      </div>
     </div>
     <script src="icons.js"></script>
   </body>
