--- a/FlappyBird/index.html
+++ b/FlappyBird/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flappy Bird</title>
+    <title>Flappy Plane</title>
     <style>
         body {
             display: flex;
@@ -26,12 +26,12 @@
     </style>
 </head>
 <body>
-    <h1>Flappy Bird</h1>
+    <h1>Flappy Plane</h1>
     <div class="stats">
         <div>Score: <span id="score">0</span></div>
         <div>High Score: <span id="highScore">0</span></div>
     </div>
-    <canvas id="gameCanvas" width="400" height="600"></canvas>
+    <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="game.js"></script>
 </body>
 </html> 
