--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
       <div class="project-card" onclick="location.href='FlappyBird/index.html'">
         <canvas class="project-icon" id="flappyBirdCanvas" width="150" height="150"></canvas>
-        <a href="./FlappyBird/index.html">Flappy Bird</a>
+        <a href="./FlappyBird/index.html">Flappy Plane</a>
       </div>
       <div class="project-card" onclick="location.href='RPG/index.html'">
         <canvas class="project-icon" id="rpgCanvas" width="150" height="150"></canvas>
