--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
         <canvas class="project-icon" id="valentinesMergeCanvas" width="150" height="150"></canvas>
         <a href="./ValentinesMerge/index.html">Valentine's Merge</a>
       </div>
+      <div class="project-card" onclick="location.href='BaseBattle/index.html'">
+        <canvas class="project-icon" id="baseBattleCanvas" width="150" height="150"></canvas>
+        <a href="./BaseBattle/index.html">Base Battle</a>
+      </div>
     </div>
     <script src="icons.js"></script>
   </body>
