--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
         <canvas class="project-icon" id="baseBattleCanvas" width="150" height="150"></canvas>
         <a href="./BaseBattle/index.html">Base Battle</a>
       </div>
+      <div class="project-card" onclick="location.href='Poker/index.html'">
+        <canvas class="project-icon" id="pokerCanvas" width="150" height="150"></canvas>
+        <a href="./Poker/index.html">Poker Game</a>
+      </div>
     </div>
     <script src="icons.js"></script>
   </body>
