--- a/Chess/index.html
+++ b/Chess/index.html
@@ -54,9 +54,91 @@
             margin: 5px 0;
             font-family: monospace;
         }
+        .menu-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        }
+        .menu-content {
+            background: #34495e;
+            padding: 30px;
+            border-radius: 10px;
+            text-align: center;
+        }
+        .opponent-select {
+            display: flex;
+            gap: 20px;
+            margin: 20px 0;
+        }
+        .opponent-card {
+            background: #2c3e50;
+            padding: 15px;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: transform 0.2s;
+        }
+        .opponent-card:hover {
+            transform: translateY(-5px);
+        }
+        .opponent-card img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            margin-bottom: 10px;
+        }
+        .color-select {
+            margin: 20px 0;
+        }
+        .menu-button {
+            padding: 10px 20px;
+            margin: 5px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            background: #2ecc71;
+            color: white;
+            cursor: pointer;
+            transition: background 0.2s;
+        }
+        .menu-button:hover {
+            background: #27ae60;
+        }
+        .selected {
+            border: 3px solid #f1c40f;
+        }
     </style>
 </head>
 <body>
+    <div class="menu-overlay" id="menuOverlay">
+        <div class="menu-content">
+            <h2>Choose Your Opponent</h2>
+            <div class="opponent-select">
+                <div class="opponent-card" data-opponent="martin">
+                    <img src="https://api.dicebear.com/6.x/personas/svg?seed=martin" alt="Martin">
+                    <h3>Martin</h3>
+                    <p>ELO: ~200</p>
+                </div>
+                <div class="opponent-card" data-opponent="stockfish">
+                    <img src="https://api.dicebear.com/6.x/personas/svg?seed=stockfish" alt="Alpha">
+                    <h3>Alpha</h3>
+                    <p>ELO: ~1000</p>
+                </div>
+            </div>
+            <div class="color-select">
+                <h3>Play as:</h3>
+                <button class="menu-button" data-color="white">White</button>
+                <button class="menu-button" data-color="black">Black</button>
+            </div>
+            <button class="menu-button" id="startGameBtn" disabled>Start Game</button>
+        </div>
+    </div>
     <div class="game-container">
         <canvas id="chessBoard" width="600" height="600"></canvas>
         <div class="info-panel">
